--- a/stylesheet.css
+++ b/stylesheet.css
@@ -168,7 +168,7 @@ input.checkbox:checked::after {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); 
+    transform: translate(-50%, -50%);
 }
 
 li>span {
@@ -202,7 +202,7 @@ li:hover .edit-task {
 
 .newInputField {
     background-color: var(--bg-cards);
-    color: var(--white);
+    color: var(--checkbox-hov);
     outline: none;
     border: none;
     font-size: 16px;
